volume label and backup

--- a/css/style.css
+++ b/css/style.css
@@ -57,6 +57,7 @@ body {
   font-weight: 600;
   margin: 0 0 0.3rem 0;
   font-size: 0.9rem;
+  text-align: left;
 }
 
 /* Main */
@@ -116,7 +117,7 @@ body {
   line-height: 1.4rem;
 }
 
-#oscilloscope {
+#oscilloscope synth.options.envelope.decay {
   cursor: default;
 }
 
