removed commented code chunks

--- a/css/style.css
+++ b/css/style.css
@@ -53,11 +53,15 @@ body {
 }
 
 /* Component Labels */
-.label p {
+.label p, .label-center p {
   font-weight: 600;
   margin: 0 0 0.3rem 0;
   font-size: 0.9rem;
   text-align: left;
+}
+
+.label-center p {
+  text-align: center;
 }
 
 /* Main */
