html organization, color consts and background

--- a/css/style.css
+++ b/css/style.css
@@ -115,7 +115,7 @@ body {
   width: 300px;
   height: 150px;
   padding: 1rem;
-  background: #e6e6e6;
+  background: #f0f0f3;
   color: #333333;
   font-size: 0.9rem;
   line-height: 1.4rem;
