--- a/scss/style.scss
+++ b/scss/style.scss
@@ -3,7 +3,7 @@
 /* SCSS Color Variables */
 $black: rgb(51, 51, 51);
 $dark-gray: rgb(180, 180, 180);
-$gray: rgb(230, 230, 230);
+$gray: rgb(240,240,243);
 $blue: rgb(1, 0, 76);
 $cyan: rgb(35, 178, 254);
 $green: rgb(3, 214, 146);
