--- a/css/style.css
+++ b/css/style.css
@@ -67,48 +67,37 @@ body {
 /* Main */
 #synth {
   margin: auto;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
 }
 
 #displays {
+  grid-column: 1/4;
+  grid-row: 1;
   display: flex;
   align-items: center;
   justify-content: space-around;
 }
 
-#envelopes {
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
-  margin: 2rem;
+#synthsizer {
+  grid-column: 1/2;
+  grid-row: 2;
 }
 
-#toggles {
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
-  margin: 2rem;
+#modulation {
+  grid-column: 2/3;
+  grid-row: 2;
 }
 
-#dials {
-  display: flex;
-  align-items: center;
-  justify-content: space-evenly;
-  margin: 1rem;
+#effects {
+  grid-column: 3/4;
+  grid-row: 2;
 }
 
-#sliders {
-  margin: auto;
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
-}
-
-#positions {
-  margin: auto;
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
-  margin-top: 2rem;
+#keyboard {
+  grid-column: 1/4;
+  grid-row: 3;
+  margin: 0 auto;
 }
 
 #midi-display {
@@ -123,10 +112,6 @@ body {
 
 #oscilloscope synth.options.envelope.decay {
   cursor: default;
-}
-
-#keyboard {
-  margin: 0 auto;
 }
 
 /* Footer */
