--- a/css/style.css
+++ b/css/style.css
@@ -53,6 +53,13 @@ body {
 }
 
 /* Component Labels */
+div h2 {
+  text-align: center;
+  font-size: 1.5rem;
+  font-weight: 600;
+  cursor: pointer;
+}
+
 .label p, .label-center p {
   font-weight: 600;
   margin: 0 0 0.3rem 0;
@@ -64,11 +71,13 @@ body {
   text-align: center;
 }
 
-/* Main */
+/* Panel */
 #synth {
   margin: auto;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
+  width: 99%;
+  gap: 10px;
 }
 
 #displays {
@@ -79,19 +88,28 @@ body {
   justify-content: space-around;
 }
 
-#synthsizer {
+#synthesizer {
   grid-column: 1/2;
   grid-row: 2;
+}
+#synthesizer .title {
+  color: #23b2fe;
 }
 
 #modulation {
   grid-column: 2/3;
   grid-row: 2;
 }
+#modulation .title {
+  background: #03d692;
+}
 
 #effects {
   grid-column: 3/4;
   grid-row: 2;
+}
+#effects .title {
+  background: #febc2c;
 }
 
 #keyboard {
