component styling and volume controls

--- a/css/style.css
+++ b/css/style.css
@@ -60,15 +60,24 @@ div h2 {
   cursor: pointer;
 }
 
-.label p, .label-center p {
+.label p, .component p {
   font-weight: 600;
   margin: 0 0 0.3rem 0;
   font-size: 0.9rem;
   text-align: left;
 }
 
-.label-center p {
+.component {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: fit-content;
   text-align: center;
+}
+
+.component {
+  display: flex;
+  flex-direction: column;
 }
 
 /* Panel */
