added keyboard styling options

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -263,7 +263,13 @@ div {
   margin-top: 2rem;
 }
 
-// for keyboard manipulation
+// For keyboard manipulation
+// #keyboard svg {
+//   border-style: solid;
+//   border-width: 2px;
+//   border-color: $blue;
+//   border-radius: 0;
+// }
 // #keyboard svg:first-of-type {
 //   border-radius: 0 0 0.3rem 0.3rem;
 //   border: 0.01rem solid rgb(51, 51, 51);
