--- a/scss/style.scss
+++ b/scss/style.scss
@@ -177,6 +177,7 @@ div {
   width: fit-content;
   text-align: center;
   padding: 0.5rem;
+
 }
 
 // .components {
@@ -223,6 +224,7 @@ div {
 #main {
   display: flex;
   justify-content: space-evenly;
+  // border: 3px solid $cyan;
 }
 
 /* ------------------------ */
