--- a/css/style.css
+++ b/css/style.css
@@ -108,7 +108,7 @@ body {
 }
 #header #dark {
   font-size: 1.9rem;
-  font-family: serif;
+  font-family: Arial;
 }
 #header #menu {
   width: 3rem;
