--- a/scss/style.scss
+++ b/scss/style.scss
@@ -126,7 +126,7 @@ body {
 
   #dark {
     font-size: 1.9rem;
-    font-family:  'Segoe UI Symbol';
+    font-family:  monospace;
   }
 
   #menu {
